<resources>
    <string name="app_name">GitGoing</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_reset">Forgot Password</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="action_logout">Logout</string>
    <string name="hint_email">abc@domain.com</string>
    <string name="hint_password">123456</string>
    <string name="action_login_short">Login</string>


    <!-- check these over -->
    <string name="save">Save</string>
    <string name="mybook">My Books</string>
    <string name="request">My Requests</string>
    <string name="borrow">My Borrowed Books</string>
    <string name="findb">Find Books</string>
    <string name="findu">Find Users</string>
    <string name="addNewBook">Add New Book</string>
    <string name="author"> Author:</string>
    <string name="title"> Title:</string>
    <string name="ISBN"> ISBN:</string>
    <string name="addBook">Add Book</string>
    <string name="deleteBook">Delete Book</string>
    <string name="scan">Scan Book Information</string>
    <string name="value">User Rating: </string>
    <string name="create">Create Profile </string>
    <string name="filters">Filters: </string>
    <string name="add">Add </string>
    <string name="all">All</string>
    <string name="accepted">Accepted</string>
    <string name="borrowed">Borrowed</string>
    <string name="status">Status </string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="return_book">Return Book</string>
    <string name="location">Location</string>
    <string name="go_to_my_books">Go To My Books</string>
    <string name="filter_by">Filter By:</string>
    <string name="request_book">Request Book</string>
    <string name="title_activity_geo_location">Map</string>
</resources>
